fixed error where position was shifted left for sponsors page

--- a/app/sponsors/sponsors.module.css
+++ b/app/sponsors/sponsors.module.css
@@ -20,7 +20,6 @@
   padding-right: 8rem;
   width: 60%;
   margin: auto;
-  position: fixed;
 }
 
 .sponsorImg {
